<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <import type="java.math.BigDecimal"/>
        <variable
            name="baseCurrency"
            type="com.wallet.core.currency.data.Currency"/>
        <variable
            name="currencyInfo"
            type="com.wallet.core.currency.data.CurrencyInfo"/>
    </data>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="@dimen/cardview_default_elevation"
        app:cardCornerRadius="@dimen/cardview_default_radius">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/market_adapter_item_padding">

            <TextView
                android:id="@+id/textView_currencyInfo_name"
                style="@style/WalletTheme.Market_CurrencyName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@{@string/market_currency_title_format(currencyInfo.currency.name, baseCurrency.name)}"
                android:textColor="@color/textColorPrimary"
                app:layout_constraintBottom_toTopOf="@+id/textView_currencyInfo_price"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="spread"
                tools:text="Currency Name" />

            <!-- TODO Remove hardcoded $ string -->
            <TextView
                android:id="@+id/textView_currencyInfo_price"
                style="@style/WalletTheme.Market_CurrencyPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:gravity="end"
                android:text="@{@string/market_currency_price_format('$', currencyInfo.price.toPlainString())}"
                android:visibility="@{currencyInfo.price != null ? View.VISIBLE : View.INVISIBLE}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_currencyInfo_name"
                tools:text="Price" />

            <Button
                android:id="@+id/button_exchange"
                style="@style/WalletTheme.Market_Button"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:text="@string/exchange"
                android:visibility="@{currencyInfo.price != null ? View.VISIBLE : View.INVISIBLE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button_sell"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_currencyInfo_price" />

            <Button
                android:id="@+id/button_sell"
                style="@style/WalletTheme.Market_Button"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/sell"
                android:visibility="@{currencyInfo.price != null ? View.VISIBLE : View.INVISIBLE}"
                app:layout_constraintBaseline_toBaselineOf="@+id/button_exchange"
                app:layout_constraintEnd_toStartOf="@+id/button_buy"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/button_exchange" />

            <Button
                android:id="@+id/button_buy"
                style="@style/WalletTheme.Market_Button"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/buy"
                android:visibility="@{currencyInfo.price != null ? View.VISIBLE : View.INVISIBLE}"
                app:layout_constraintBaseline_toBaselineOf="@+id/button_sell"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/button_sell" />

            <TextView
                android:id="@+id/textView_currencyInfo_error"
                style="@style/WalletTheme.Market_Error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/market_currency_fetch_error"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:visibility="@{currencyInfo.price == null ? View.VISIBLE : View.INVISIBLE}"
                tools:layout_editor_absoluteX="150dp"
                tools:layout_editor_absoluteY="44dp" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</layout>